Set basic structure for quiz

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Quiz Game</title>
   </head>
   <body>
+    <div id="question"></div>
+    <div>
+      <button class="choices"></button>
+      <button class="choices"></button>
+      <button class="choices"></button>
+      <button class="choices"></button>
+    </div>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
