add functions to quiz

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <title>Quiz Game</title>
   </head>
   <body>
-    <div id="question"></div>
+    <div id="question">Question?</div>
+    <div id="answer-btn">
+      <button class="choices">choice1</button>
+      <button class="choices">choice2</button>
+      <button class="choices">choice3</button>
+      <button class="choices">choice4</button>
+    </div>
     <div>
-      <button class="choices"></button>
-      <button class="choices"></button>
-      <button class="choices"></button>
-      <button class="choices"></button>
+      <button id="next-btn"></button>
     </div>
     <script src="assets/js/script.js"></script>
   </body>
